--- a/mapcomposer/app/templates/manager.html
+++ b/mapcomposer/app/templates/manager.html
@@ -29,6 +29,18 @@
     <link rel="stylesheet" type="text/css" href="externals/GeoExt/resources/css/layerlegend.css">
     <link rel="stylesheet" type="text/css" href="externals/GeoExt/resources/css/gxtheme-gray.css">
     <script type="text/javascript" src="script/GeoExt.js"></script> 
+        
+     <!-- gxp resources -->
+    <link rel="stylesheet" type="text/css" href="externals/gxp/src/theme/all.css">
+    <script type="text/javascript" src="script/gxp.js"></script> 
+
+    <!-- GeoExplorer resources -->
+    <link rel="stylesheet" type="text/css" href="theme/app/geoexplorer.css" />
+    <link rel="stylesheet" type="text/css" href="theme/app/mapstore.css" />
+    <!--[if IE]><link rel="stylesheet" type="text/css" href="theme/app/ie.css"/><![endif]-->        
+
+    <script type="text/javascript" src="script/GeoExplorer.js"></script>
+    <script type="text/javascript" src="script/ux.js"></script>
     
     <!-- translation data  -->
     <script type="text/javascript" src="externals/mapmanager/translations/en.js"></script>
